v3.6.4 (2020-05-26)
-------------------

* Web UI is now using pre-compiled templates.

* Fixed an issue with truncate of a collection after a dbserver was restarted
  very quickly. This could block arangosync from making progress because the
  _jobs collection could no longer be truncated.

* Fixed issue #11652: Error: AQL: missing variable #2 (1) for node #6
  (FilterNode) while planning registers.

* Update OpenLDAP to 2.4.50.

* Fixed issue ES-545: failing modification operations led to random crashes with
  "Index out of bound" error message.

* Fixed edge cases in RocksDB primary index range lookups for operators >= and <.

* Fixed issue #11525: Address security vulnerability by updating Swagger-UI
  dependency (upgraded Swagger UI to 3.25.1).

* Updated arangosync to 0.7.5.

* Fixed ability to edit graph edge in Graph Viewer of web UI.

* Fixed issue #10371: For k-shortest-paths queries on certain graphs a condition
  to abort search was too eager and hence missed the shortest path between two
  vertices and returned a longer one.

* Fixed issue ES-605: arangodump broken when using encryption.

* Added a forgotten Plan/Version increment in cleanup code in createCollection.

* Do not loadPlan from agency whenever all collections of a database are listed.
  This is particularly important for arangosync.

* Properly forward requests based on the transaction header.

* Fixed issue #11590: Querying for document by _key returning only a single
  seemingly random property on entity ("old", in this case).

  This fixes single-key document lookups in the cluster for simple by-key
  AQL queries, such as `FOR doc IN collection FILTER doc._key == @key RETURN
  doc` in case the document has either an "old" or a "new" attribute.

* Fix a bad deadlock because transaction cleanup was pushed with too low
  priority.

* Fix a dead-lock situation in hot-backup case.

  If the cluster is under high write load, then a hot-backup is requested, and