@@ -1,6 +1,8 @@
 v3.6.4 (2020-05-26)
 -------------------
 
+* Catch exceptions in agency callbacks
+
 * Web UI is now using pre-compiled templates.
 
 * Fixed an issue with truncate of a collection after a dbserver was restarted
